--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 }
 
 nav {
-  background-color: black;
+  background-color: #0081c9;
   position: relative;
 }
 
@@ -64,9 +64,9 @@ nav {
 
 nav .side-nav {
   position: absolute;
-  width: 40vw;
+  width: 25vw;
   height: 100vh;
-  background-color: red;
+  background-color: #ffc93c;
   left: -90vh;
   transition: 1s;
 }
@@ -127,6 +127,73 @@ nav .side-nav {
   cursor: pointer;
 }
 
+.news-container {
+  padding: 10px;
+  background-color: antiquewhite;
+  border-radius: 20px;
+  margin: 10px;
+}
+
+.news-heading {
+  font-size: 30px;
+  margin: 10px;
+}
+.news-information {
+  margin: 10px;
+}
+.subheading {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 20px 0 20px 0;
+}
+
+p {
+  padding: 5px;
+  font-size: 17px;
+  font-weight: 300;
+}
+
+.news-information-image {
+  width: 80%;
+  height: 200px;
+  margin: 20px 0 20px 37px;
+  border-radius: 20px;
+}
+.right-section {
+  width: 350px;
+  height: 250px;
+  /* background-color: blue; */
+  float: right;
+  display: flex;
+  flex-direction: column;
+  margin: 25 px;
+}
+.likes-section {
+  width: 100%;
+  height: 40px;
+  /* background-color: lime; */
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5px;
+  box-sizing: border-box;
+}
+.middle-link {
+  color: #3c79f5;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.sidenav-list-container {
+  width: 100%;
+  height: auto;
+  /* background-color: red; */
+  margin: 80px 0 0 20px;
+}
+
+.money {
+  color: #fb2576;
+  font-weight: 500;
+}
 @media only screen and (max-width: 520px) {
   .left-navigation .company-name {
     font-size: 30px;
@@ -144,6 +211,24 @@ nav .side-nav {
   }
   .min-width-display {
     display: block;
+  }
+  nav .side-nav {
+    width: 35vh;
+  }
+}
+
+@media only screen and (max-width: 720px) and (min-width: 520px) {
+  .right-section {
+    width: 250px;
+    height: 200px;
+  }
+}
+
+@media only screen and (max-width: 520px) {
+  .right-section {
+    width: 200px;
+    height: 150px;
+    margin: 10px;
   }
 }
 
