--- a/css/style.css
+++ b/css/style.css
@@ -73,9 +73,10 @@ nav .side-nav {
 
 .side-nav ul li {
   font-size: 20px;
-  color: white;
+  color: black;
   margin: 30px;
   list-style: none;
+  font-weight: 500;
 }
 
 .side-nav .close-side-nav {
@@ -154,28 +155,31 @@ p {
 }
 
 .news-information-image {
-  width: 80%;
-  height: 200px;
-  margin: 20px 0 20px 37px;
+  width: 100%;
+  height: 100%;
+  /* margin: 20px 0 20px 37px; */
   border-radius: 20px;
 }
 .right-section {
   width: 350px;
   height: 250px;
-  /* background-color: blue; */
+  background-color: blue;
   float: right;
   display: flex;
   flex-direction: column;
-  margin: 25 px;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
 }
 .likes-section {
   width: 100%;
   height: 40px;
-  /* background-color: lime; */
+  background-color: lime;
   display: flex;
   justify-content: space-evenly;
   padding: 5px;
   box-sizing: border-box;
+  padding-top: 10px;
 }
 .middle-link {
   color: #3c79f5;
@@ -188,6 +192,10 @@ p {
   height: auto;
   /* background-color: red; */
   margin: 80px 0 0 20px;
+}
+
+i {
+  font-size: 20px;
 }
 
 .money {
