--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .left-navigation .burger {
@@ -69,6 +71,7 @@ nav .side-nav {
   background-color: #ffc93c;
   left: -90vh;
   transition: 1s;
+  z-index: 999;
 }
 
 .side-nav ul li {
@@ -130,9 +133,15 @@ nav .side-nav {
 
 .news-container {
   padding: 10px;
-  background-color: antiquewhite;
+  background-color: rgb(205, 184, 157);
+  /* background-color: rgb(164, 246, 255); */
   border-radius: 20px;
-  margin: 10px;
+  margin: 10px 20px 70px 20px;
+  box-shadow: 5px 5px 30px 5px rgb(92, 84, 74);
+  border: 2px solid black;
+}
+img:hover {
+  cursor: pointer;
 }
 
 .news-heading {
@@ -152,6 +161,7 @@ p {
   padding: 5px;
   font-size: 17px;
   font-weight: 300;
+  /* color: white; */
 }
 
 .news-information-image {
@@ -163,7 +173,7 @@ p {
 .right-section {
   width: 350px;
   height: 250px;
-  background-color: blue;
+  /* background-color: blue; */
   float: right;
   display: flex;
   flex-direction: column;
@@ -174,7 +184,7 @@ p {
 .likes-section {
   width: 100%;
   height: 40px;
-  background-color: lime;
+  /* background-color: lime; */
   display: flex;
   justify-content: space-evenly;
   padding: 5px;
@@ -194,15 +204,64 @@ p {
   margin: 80px 0 0 20px;
 }
 
-i {
-  font-size: 20px;
+.live {
+  width: 25px;
+  height: 25px;
+  animation: live 1s infinite;
+  filter: grayscale(100%);
+  animation: live infinite 1s;
+  box-shadow: 5px 5px 5px 2px red, inset 5px 5px 10px red;
+  border-radius: 6px;
+  margin-top: -10px;
+}
+
+@keyframes live {
+  0% {
+    filter: grayscale(100%);
+  }
+  50% {
+    filter: grayscale(00%);
+  }
+  70% {
+    filter: grayscale(50%);
+  }
+  100% {
+    filter: grayscale(100%);
+  }
+}
+
+.top-stories {
+  width: 100%;
+  height: 70px;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.top-stories-label {
+  color: white;
+  margin-left: 40px;
+  font-weight: bold;
+}
+.scroller-items {
+  color: white;
+  background-color: #0081c9;
+  margin: 0 20px 0 20px;
+  /* border-radius: 100px; */
+  font-size: 15px;
+  padding: 20px;
+}
+
+.money .money-unit {
+  font-weight: bold;
 }
 
 .money {
   color: #fb2576;
   font-weight: 500;
+  text-decoration: none;
 }
-@media only screen and (max-width: 520px) {
+@media only screen and (max-width: 650px) {
   .left-navigation .company-name {
     font-size: 30px;
     color: white;
